--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tdp-web-components",
+  "name": "@tdp/ckan-web-components",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "The Data Place CKAN Web component library",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "es2015": "dist/esm/index.mjs",
@@ -22,12 +22,17 @@
     "generate": "stencil generate"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "2.0.6",
     "@stencil/core": "1.8.7",
+    "@stencil/postcss": "1.0.1",
     "@stencil/sass": "1.1.1",
-    "@types/jest": "25.1.1"
+    "@types/autoprefixer": "9.6.1",
+    "@types/jest": "25.1.1",
+    "@types/node": "13.7.0",
+    "autoprefixer": "9.7.4",
+    "cssnano": "4.1.10",
+    "tailwindcss": "1.2.0"
   },
   "license": "MIT",
-  "dependencies": {
-    "tailwindcss": "1.2.0"
-  }
+  "dependencies": {}
 }
