--- a/package.json
+++ b/package.json
@@ -19,18 +19,28 @@
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "2.0.6",
     "@stencil/core": "1.8.7",
     "@stencil/postcss": "1.0.1",
     "@stencil/sass": "1.1.1",
+    "@storybook/addon-actions": "5.3.12",
+    "@storybook/addon-console": "1.2.1",
+    "@storybook/addon-knobs": "5.3.12",
+    "@storybook/addon-notes": "5.3.12",
+    "@storybook/preset-typescript": "1.2.0",
+    "@storybook/web-components": "5.3.12",
     "@types/autoprefixer": "9.6.1",
-    "@types/jest": "25.1.1",
+    "@types/jest": "25.1.2",
     "@types/node": "13.7.0",
     "autoprefixer": "9.7.4",
+    "babel-loader": "8.0.6",
     "cssnano": "4.1.10",
+    "lit-html": "1.1.2",
     "tailwindcss": "1.2.0"
   },
   "license": "MIT",
