--- a/package.json
+++ b/package.json
@@ -20,28 +20,38 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006 -s ./www",
+    "build-storybook": "build-storybook -w -s ./www"
   },
   "devDependencies": {
+    "@babel/core": "7.8.4",
     "@fullhuman/postcss-purgecss": "2.0.6",
     "@stencil/core": "1.8.7",
     "@stencil/postcss": "1.0.1",
     "@stencil/sass": "1.1.1",
     "@storybook/addon-actions": "5.3.12",
     "@storybook/addon-console": "1.2.1",
+    "@storybook/addon-essentials": "5.3.12",
     "@storybook/addon-knobs": "5.3.12",
     "@storybook/addon-notes": "5.3.12",
     "@storybook/preset-typescript": "1.2.0",
     "@storybook/web-components": "5.3.12",
     "@types/autoprefixer": "9.6.1",
-    "@types/jest": "25.1.2",
+    "@types/jest": "24.0.25",
     "@types/node": "13.7.0",
+    "@types/puppeteer": "1.20.3",
+    "@types/react": "16.9.19",
     "autoprefixer": "9.7.4",
     "babel-loader": "8.0.6",
     "cssnano": "4.1.10",
+    "fork-ts-checker-webpack-plugin": "4.0.3",
+    "jest": "24.9.0",
+    "jest-cli": "24.9.0",
     "lit-html": "1.1.2",
-    "tailwindcss": "1.2.0"
+    "puppeteer": "1.20.0",
+    "react-docgen-typescript-loader": "3.6.0",
+    "tailwindcss": "1.2.0",
+    "ts-loader": "6.2.1"
   },
   "license": "MIT",
   "dependencies": {
