--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
     "storybook": "stencil build --docs && start-storybook -p 6007 -s ./www",
-    "build-storybook": "build-storybook -w -s ./www"
+    "build-storybook": "stencil build --docs && build-storybook -w -s ./www -o .storybook-compiled"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
     "@fullhuman/postcss-purgecss": "2.0.6",
-    "@stencil/core": "1.8.7",
+    "@stencil/core": "1.8.8",
     "@stencil/postcss": "1.0.1",
     "@stencil/sass": "1.1.1",
-    "@storybook/addon-actions": "5.3.12",
+    "@storybook/addon-actions": "5.3.13",
     "@storybook/addon-console": "1.2.1",
-    "@storybook/addon-essentials": "5.3.12",
-    "@storybook/addon-knobs": "5.3.12",
-    "@storybook/addon-notes": "5.3.12",
+    "@storybook/addon-essentials": "5.3.13",
+    "@storybook/addon-knobs": "5.3.13",
+    "@storybook/addon-notes": "5.3.13",
     "@storybook/preset-typescript": "1.2.0",
-    "@storybook/web-components": "5.3.12",
+    "@storybook/web-components": "5.3.13",
     "@types/autoprefixer": "9.6.1",
     "@types/jest": "24.0.25",
-    "@types/node": "13.7.0",
+    "@types/node": "13.7.1",
     "@types/puppeteer": "1.20.3",
     "@types/react": "16.9.19",
     "autoprefixer": "9.7.4",
